<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蔬果行情站</string>
    <string name="fruit">水果</string>
    <string name="vegetable">蔬菜</string>
    <string name="setting">設定</string>
    <string name="menu">選單</string>
    <string name="title_activity_data_list">行情表</string>
    <string name="my_list">我的清單</string>
    <string name="search">查詢</string>
    <string name="market">市場</string>
    <string name="mode">模式</string>
    <string name="back">返回</string>
    <string name="refresh">重新整理</string>
    <string name="choose_fruit_market">選擇預設水果批發市場</string>
    <string name="choose_vegetable_market">選擇預設蔬菜批發市場</string>
    <string name="choose_service">選擇開啟方式</string>
    <string name="unit">重量單位</string>
    <string name="customer_mode">消費者模式</string>
    <string name="customer_mode_description">顯示包含利潤的平均價格</string>
    <string name="other_info">其他資訊</string>
    <string name="about">關於</string>
    <string name="contact">連絡作者</string>
    <string name="rating">評分</string>
    <string name="get_source_code">取得原始碼</string>
    <string name="about_app">此為透過農委會交易站查詢蔬果時價的應用程式，目前尚有不完善之處，若有任何想法歡迎提出。</string>
    <string name="mail_subject">蔬果行情站之想法與建議</string>
    <string name="provide_suggestion">提供想法或意見</string>
    <string name="rating_for_app">為本應用程式評分</string>
    <string name="about_description">本應用程式之簡介</string>
    <string name="visit_site">拜訪作者網站</string>
    <string name="site">網站</string>
    <string name="pref_key_rating">rating</string>
    <string name="pref_key_about">about</string>
    <string name="pref_key_visit">visit</string>
    <string name="pref_key_profit">profitRange</string>
    <string name="pref_key_is_customer">isCustomer</string>
    <string name="set_zero_profit">是否檢視不包含利潤之批發價格？</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="loading">讀取中......</string>
    <string name="pref_key_unit">gravity_unit</string>
    <string name="pref_key_fruit_market">fruitMarketList</string>
    <string name="pref_key_vegetable_market">vegetableMarketList</string>
    <string name="token">c14f554a72062efdef37e29d9ab7fe15</string>
    <string name="error_network">網路狀況不佳, 請確認是否連上網路.</string>
    <string name="error_site">連不上網站, 請稍候再重新整理一次.</string>
    <string name="share_text">蔬果行情站可以查詢最新的蔬果價格，推薦你也來用用看：https://play.google.com/store/apps/details?id=com.jarvislin.producepricechecker</string>
    <string name="remove_bookmark">已移除重點標示</string>
    <string name="add_bookmark">已將項目加入重點標示</string>
    <string name="banner_ad_unit_id">ca-app-pub-7707196961258408/5115613320</string>
    <string name="please_wait">請稍候...</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
