<com.jarvislin.producepricechecker.page.Index.IndexPage_ xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="50dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:layout_gravity="center" />

            </FrameLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:stretchColumns="*">

                <TableRow android:layout_weight="1">
                    <Button
                        android:id="@+id/vegetable"
                        style="@style/MenuButton"
                        android:background="@drawable/vegetable"/>

                    <Button android:id="@+id/fruit"
                        style="@style/MenuButton"
                        android:background="@drawable/fruit"/>
                </TableRow>

                <TableRow android:layout_weight="1">
                    <TextView
                        style="@style/IndexText"
                        android:text="@string/vegetable"/>

                    <TextView
                        style="@style/IndexText"
                        android:text="@string/fruit"/>
                </TableRow>

                <TableRow android:layout_weight="1">
                    <Button
                        android:id="@+id/settings"
                        style="@style/MenuButton"
                        android:layout_span="2"
                        android:background="@drawable/settings"/>
                </TableRow>

                <TableRow android:layout_weight="1">
                    <TextView
                        style="@style/IndexText"
                        android:layout_span="2"
                        android:text="@string/setting"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
</com.jarvislin.producepricechecker.page.Index.IndexPage_>
